--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "paths": {
       "@data/*": ["./src/data/*"],
       "@models/*": ["./src/models/*"],
-      "@controllers/*": ["./src/controllers/*"]
+      "@controllers/*": ["./src/controllers/*"],
+      "@config/*": ["./src/config/*"]
     }
   },
   "include": [
