auth complete challenge

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@data/*": ["./src/data/*"],
       "@models/*": ["./src/models/*"],
       "@controllers/*": ["./src/controllers/*"],
-      "@config/*": ["./src/config/*"]
+      "@config/*": ["./src/config/*"],
+      "@middlewares/*": ["./src/middlewares/*"]
     }
   },
   "include": [
