--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "debug": "ts-node-dev --inspect -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify   src/server.ts",
-    "swagger-autogen": "node src/swagger.js"
+    "swagger-autogen": "node src/swagger.js",
+    "start": "npm run build && node ./dist/server.js"
   },
   "dependencies": {
     "@types/swagger-ui-express": "^4.1.2",
