--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "debug": "ts-node-dev --inspect -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify   src/server.ts",
-    "swagger-autogen": "node src/swagger.js",
+    "heroku-postbuild": "npm run build",
     "start": "npm run build && node ./dist/server.js"
   },
   "dependencies": {
-    "@types/swagger-ui-express": "^4.1.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
